test/errors/type/collections/set/copy.yasl
echo collections.set().copy(1)
